Fix locking botch.

PR/48383